# django-account-locker

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
account_locker/: admin.py  apps.py  decorators.py  exceptions.py  lockout.py  models.py  settings.py
account_locker/migrations/: 0001_initial.py
demo/: auth_backends.py  settings.py
tests/: conftest.py  settings.py  test_decorators.py  test_lockout.py  test_models.py  test_my_app.py
