[tool.poetry]
name = "django-account-locker"
version = "0.3.0"
description = "Django app to manage account login throttling."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-account-locker"
repository = "https://github.com/yunojuno/django-account-locker"
documentation = "https://github.com/yunojuno/django-account-locker"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "account_locker" }]

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.2,<7.0"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
